--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,3 @@
-AUX_SOURCE_DIRECTORY(utils utilsSRC)
-AUX_SOURCE_DIRECTORY(adt adtSRC)
-AUX_SOURCE_DIRECTORY(nodes nodesSRC)
-
-add_library(U3DC_LIB u3d.c
-        ${nodesSRC}
-        ${adtSRC}
-        ${utilsSRC} u3d_context.c)
+add_subdirectory(utils)
+add_subdirectory(adt)
+add_subdirectory(core)
